# office-google-mac-mcp

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/skills/office-mcp/: SKILL.md
src/office_mcp/: __main__.py  bridge.py  excel.py  powerpoint.py  server.py  word.py
